--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -30,7 +30,7 @@ exec-once = hypridle
 monitor = $primary_monitor,3840x2160@144,auto,2.0
 monitor = $secondary_monitor,3840x2160@60,0x0,2.0
 # Register correct an than be able to disable/enable from bar
-exec = hyprctl keyword monitor $secondary_monitor,disable
+exec-once = hyprctl keyword monitor $secondary_monitor,disable
 
 workspace = $primary_monitor, 1
 workspace = $primary_monitor, 2
