--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -8,10 +8,10 @@ binds {
     bind = SUPER, C, resizeactive, exact 70% 60%
     bind = SUPER, C, centerwindow
 
-    bind = SUPER, P, setfloating
-    bind = SUPER, P, centerwindow
-    bind = SUPER, P, resizeactive, exact 30% 30%
-    bind = SUPER, P, moveactive, exact +90% +10%
+    # bind = SUPER, P, setfloating
+    # bind = SUPER, P, centerwindow
+    # bind = SUPER, P, resizeactive, exact 30% 30%
+    # bind = SUPER, P, moveactive, exact +90% +10%
     bind = SUPER_SHIFT, P, pin
 
     bind = SUPER_SHIFT, C, killactive
