--- a/home/.config/hypr/rules.conf
+++ b/home/.config/hypr/rules.conf
@@ -43,7 +43,7 @@ windowrules {
     # ----------------------------
     windowrulev2 = workspace 1, class:^(.*firefox.*)
     windowrulev2 = opacity 0.96 override 0.92 override, class:^(.*firefox.*)
-    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*firefox.*), title:^(.*Twitch.*|.*ZDFmediathek.*|.*YouTube.*|.*Livestream.*|.*F1 TV.*|.*Disney+.*|.*Netflix.*)
+    windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*firefox.*), title:^(.*WatchSerie.*|.*Twitch.*|.*ZDFmediathek.*|.*YouTube.*|.*Livestream.*|.*F1 TV.*|.*Disney+.*|.*Netflix.*)
 
     # ------------------------
     # ---------- MPV ---------
@@ -105,7 +105,7 @@ windowrules {
     # ---------------------------------------
     # ---------- Visual Studio Code ---------
     # ---------------------------------------
-    windowrulev2 = opacity 0.96 override 0.92 override, class:^(code)
+    windowrulev2 = opacity 0.95 override 0.90 override, class:^(code)
     windowrulev2 = workspace 3, class:^(.*code.*), title:^(.*Visual Studio Code.*)
     windowrulev2 = float, class:^(.*code.*), title:^(.*Open .*)
     windowrulev2 = size 40% 40%, class:^(.*code.*), title:^(.*Open .*)
