adaptation to laptop

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -3,10 +3,6 @@
 #   - mointors configured at 4K with scaling and refreshrate
 # ============================================================
 
-# hyprctl monitors
-$primary_monitor = DP-3
-$secondary_monitor = DP-1
-
 $terminal = alacritty
 $fileManager = thunar
 $menu = rofi -show drun
@@ -21,23 +17,22 @@ source = ~/.config/hypr/theme.conf
 # Plugins
 exec-once = hyprpaper
 exec-once = hypridle
-# exec-once = hyprpm reload -n
-
-# https://github.com/VortexCoyote/hyprfocus    ! does not buld right now!!!!!!!!! try again later
-# source = ~/.config/hypr/plugins/hyprfocus.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = $primary_monitor,3840x2160@144,auto,2.0
-monitor = $secondary_monitor,3840x2160@60,0x0,2.0
-# Register correct an than be able to disable/enable from bar
-exec-once = hyprctl keyword monitor $secondary_monitor,disable
+# - use `hyprctl monitors` two get names
 
-workspace = $primary_monitor, 1
-workspace = $primary_monitor, 2
-workspace = $primary_monitor, 3
-workspace = $primary_monitor, 4
-workspace = $primary_monitor, 5
-workspace = $primary_monitor, 6
+# Setting for second workplace at home
+monitor = eDP-1, 1920x1200@60, auto, 1.25
+monitor =  DP-3, 1920x1080@60, 0x0 , 1.25
+
+exec = hyprctl monitors | grep DP-3 && pkill eww; eww open bar --screen 1
+
+workspace = eDP-1, 1
+workspace = eDP-1, 2
+workspace = eDP-1, 3
+workspace = eDP-1, 4
+workspace = eDP-1, 5
+workspace = eDP-1, 6
 
 xwayland {
   force_zero_scaling = true
@@ -55,7 +50,7 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.75
+    sensitivity = -0.50
     accel_profile = 'adaptive'
 }
 
