--- a/home/.config/hypr/hyprlock.conf
+++ b/home/.config/hypr/hyprlock.conf
@@ -2,10 +2,9 @@
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 
 $BACKGROUND_IMAGE = ~/.local/share/backgrounds/linux-elitist/tokyo-lofi-healing-1.png
-# $BACKGROUND_IMAGE = ~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
 $AVATAR_IMAGE = ~/.config/hypr/assets/avatar.jpg
 
-# # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
+# https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 general {
   grace = 0
   no_fade_out = true
@@ -28,27 +27,25 @@ background {
     vibrancy_darkness = 0.0
 }
 
-
 # -----------------------------------------------------------------------
 # ---------------------------------- INPUT ------------------------------
 # -----------------------------------------------------------------------
 input-field {
     monitor =
-    size = 1000, 55
+    size = 600, 30
     outline_thickness = 8
     dots_size = 0.6
-    dots_spacing = 0.7
+    dots_spacing = 0.8
     dots_center = true
     outer_color = rgba(230, 230, 230, 0.0)
     inner_color = rgba(230, 230, 230, 0.0)
     font_color = rgba(49, 183, 242, 0.75)
-    # font_color = rgba(239, 236, 254, 1.0)
     fade_on_empty = true
     fade_timeout = 1000
     placeholder_text =
     hide_input = false
     rounding = -1
-    check_color = rgba(255, 255, 255, 0.0)
+    check_color = rgba(239, 236, 254, 0.0)
     fail_color = rgba(255, 103, 103, 0.75)
     fail_text =
     fail_transition = 200
@@ -57,8 +54,8 @@ input-field {
     bothlock_color = rgba(241, 192, 125, 1.0)
     invert_numlock = false
     swap_font_color = false
-    
-    position = 0, 300
+
+    position = 0, 225
     halign = center
     valign = bottom
 }
@@ -66,15 +63,14 @@ input-field {
 label {
     monitor =
     text = $ATTEMPTS[just start typing]
-    color = rgba(239, 236, 254, 0.50)
-    font_size = 24
+    color = rgba(239, 236, 254, 0.35)
+    font_size = 18
     font_family = SF Pro Display
 
-    position = 0, 200
+    position = 0, 50
     halign = center
     valign = bottom
 }
-
 
 # -----------------------------------------------------------------------
 # --------------------------------- DATETIME ----------------------------
@@ -88,7 +84,7 @@ label {
     shadow_passes = 3
     shadow_size = 4
 
-    position = 0, 100
+    position = 0, -50
     halign = center
     valign = center
 }
@@ -100,7 +96,7 @@ label {
     font_size = 24
     font_family = SF Pro Display
 
-    position = 0, -4
+    position = 0, -150
     halign = center
     valign = center
 }
@@ -112,24 +108,23 @@ label {
     monitor =
     text = cmd[update:10000] echo "$USER"
     color = rgba(49, 183, 242, 0.75)
-    font_size = 28
+    font_size = 26
     font_family = SF Pro Display Bold
-    position = 50, -450
+    position = 52, -325
     halign = center
     valign = top
 }
 
 label {
     monitor =
-    text = cmd[update:10000] echo "  |"
+    text = cmd[update:10000] echo " "
     color = rgba(242, 243, 244, 1.0)
-    font_size = 28
+    font_size = 24
     font_family = SF Pro Display Bold
-    position =-40, -450
+    position =-18, -325
     halign = center
     valign = top
 }
-
 
 image {
     monitor =
@@ -142,23 +137,21 @@ image {
     rotate = 0
     reload_time = -1
     reload_cmd = 
-    position = 0, -200
+    position = 0, -100
     halign = center
     valign = top
 }
-
 
 # --------------------------------------------------------------------
 # ------------------------------ MUSIC INFO --------------------------
 # --------------------------------------------------------------------
 label {
     monitor =
-#    text= cmd[update:1000] echo "$(playerctl metadata --format "{{ mpris:trackid }}" 2>/dev/null | grep -Eo "chromium|firefox|spotify")"
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --source) "
     color = rgba(239, 236, 254, 1.0)
-    font_size = 32
+    font_size = 24
     font_family = SF Pro Display Bold
-    position = 200, -200
+    position = 100, -200
     halign = left
     valign = top
 }
@@ -167,9 +160,9 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --artist)"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 24
+    font_size = 18
     font_family = SF Pro Display Bold
-    position = 275, -325
+    position = 150, -270
     halign = left
     valign = top
 }
@@ -178,9 +171,9 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --title)"
     color = rgba(239, 236, 254, 0.5)
-    font_size = 24
+    font_size = 18
     font_family = SF Pro Display
-    position = 275, -375
+    position = 150, -310
     halign = left
     valign = top
 }
@@ -189,27 +182,27 @@ label {
     monitor =
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --album)"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 20
+    font_size = 14
     font_family = SF Pro Display Italic
-    position = 275, -450
+    position = 150, -360
     halign = left
     valign = top
 }
 
-# image {
-#     monitor =
-#     path = 
-#     size = 60 # lesser side if not 1:1 ratio
-#     rounding = 5 # negative values mean circle
-#     border_size = 0
-#     rotate = 0 # degrees, counter-clockwise
-#     reload_time = 2
-#     reload_cmd = ~/.config/hypr/scripts/playerctl.sh --arturl
-#     position = 150, -300
-#     halign = center
-#     valign = center
-#     opacity=0.5
-# }
+image {
+    monitor =
+    path = 
+    size = 200
+    rounding = 3 
+    border_size = 1
+    rotate = 0
+    reload_time = 2
+    reload_cmd = ~/.config/hypr/scripts/player.sh --arturl
+    position = 160, -430
+    halign = left
+    valign = top
+    opacity=0.5
+}
 
 # ---------------------------------------------------------------------
 # ------------------------------ SYSTEM INFO --------------------------
@@ -218,9 +211,9 @@ label {
     monitor =
     text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/keyboard.sh --icon)  $(~/.config/hypr/scripts/keyboard.sh --layout)"
     color = rgba(255, 255, 255, 1.0)
-    font_size = 24
+    font_size = 18
     font_family = SF Pro Display Bold
-    position = -325, -10
+    position = -310, -10
     halign = right
     valign = top
 }
@@ -228,11 +221,11 @@ label {
 
 label {
     monitor =
-    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/network.sh --icon)  $(~/.config/hypr/scripts/network.sh --adapter)"
+    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/network.sh --icon) $(~/.config/hypr/scripts/network.sh --adapter)"
     color = rgba(255, 255, 255, 1.0)
-    font_size = 24
+    font_size = 18
     font_family = SF Pro Display Bold
-    position = -115, -10
+    position = -150, -10
     halign = right
     valign = top
 }
@@ -240,11 +233,11 @@ label {
 
 label {
     monitor =
-    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon)"
+    text = cmd[update:5000] echo -e "$(~/.config/hypr/scripts/power.sh --icon)  $(~/.config/hypr/scripts/power.sh --value)%"
     color = rgba(97, 255, 202, 1.0)
-    font_size = 30
+    font_size = 18
     font_family = SF Pro Display Bold
-    position = -30, -10
+    position = -10, -10
     halign = right
     valign = top
 }
