--- a/home/.config/hypr/hyprpaper.conf
+++ b/home/.config/hypr/hyprpaper.conf
@@ -2,7 +2,7 @@
 
 preload = ~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
 
-wallpaper = DP-1,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
-wallpaper = DP-3,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
+wallpaper = eDP-1,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
+wallpaper =  DP-3,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
 
 splash = false
