--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -8,10 +8,6 @@ binds {
     bind = SUPER, C, resizeactive, exact 70% 60%
     bind = SUPER, C, centerwindow
 
-    # bind = SUPER, P, setfloating
-    # bind = SUPER, P, centerwindow
-    # bind = SUPER, P, resizeactive, exact 30% 30%
-    # bind = SUPER, P, moveactive, exact +90% +10%
     bind = SUPER_SHIFT, P, pin
 
     bind = SUPER_SHIFT, C, killactive
@@ -52,10 +48,6 @@ binds {
     bind = SUPER, 4, workspace, 4
     bind = SUPER, 5, workspace, 5
     bind = SUPER, 6, workspace, 6
-    # bind = SUPER, 7, workspace, 7
-    # bind = SUPER, 8, workspace, 8
-    # bind = SUPER, 9, workspace, 9
-    # bind = SUPER, 0, workspace, 10
 
     # Move active window to a workspace with mainMod + SHIFT + [0-9]
     bind = SUPER SHIFT, 1, movetoworkspace, 1
@@ -64,10 +56,6 @@ binds {
     bind = SUPER SHIFT, 4, movetoworkspace, 4
     bind = SUPER SHIFT, 5, movetoworkspace, 5
     bind = SUPER SHIFT, 6, movetoworkspace, 6
-    # bind = SUPER SHIFT, 7, movetoworkspace, 7
-    # bind = SUPER SHIFT, 8, movetoworkspace, 8
-    # bind = SUPER SHIFT, 9, movetoworkspace, 9
-    # bind = SUPER SHIFT, 0, movetoworkspace, 10
 
     # Scroll through existing workspaces with mainMod + scroll
     bind = SUPER, mouse_down, workspace, e+1
@@ -85,9 +73,13 @@ binds {
     # Volume
     bindle = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/sound.sh --up && sleep 0.05
     bindle = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/sound.sh --down && sleep 0.05
-    bindl = , XF86AudioMute, exec, ~/.config/hypr/scripts/sound.sh --mute && sleep 0.05
+    bindl = , XF86AudioMute, exec, ~/.config/hypr/scripts/sound.sh --mute
+
+    # Brightness
+    binde = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
+    binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 
     # Capturing
     bind = SUPER_SHIFT, s, exec, capture --image
-    bind = SUPER_SHIFT, v, exec, capture --video  # Second press stops recording
+    bind = SUPER_SHIFT, v, exec, capture --video
 }
