--- a/home/.config/hypr/hypridle.conf
+++ b/home/.config/hypr/hypridle.conf
@@ -6,30 +6,30 @@ general {
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
-# listener {
-#     timeout = 150                                # 2.5min.
-#     on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-#     on-resume = brightnessctl -r                 # monitor backlight restore.
-# }
+listener {
+    timeout = 60
+    on-timeout = brightnessctl -sd tpacpi::kbd_backlight set 0
+    on-resume = brightnessctl -rd tpacpi::kbd_backlight
+}
+
+listener {
+    timeout = 60
+    on-timeout = brightnessctl -s set 10
+    on-resume = brightnessctl -r
+}
 
 # listener {
-#     timeout = 150                                          # 2.5min.
-#     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
-#     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
+#     timeout = 20
+#     on-timeout = hyprctl dispatch dpms off
+#     on-resume = hyprctl dispatch dpms on
 # }
 
 listener {
     timeout = 300
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    on-timeout = loginctl lock-session
 }
-
-# listener {
-#     timeout = 330                                 # 5.5min
-#     on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-#     on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
-# }
 
 listener {
     timeout = 1800
-    on-timeout = systemctl suspend                # suspend pc
+    on-timeout = systemctl suspend
 }
