small changes; start of app for settings

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -27,8 +27,8 @@ exec-once = hypridle
 # source = ~/.config/hypr/plugins/hyprfocus.conf
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = $primary_monitor,3840x2160@144,auto,2.0
-monitor = $secondary_monitor,3840x2160@60,0x0,2.0
+monitor = $primary_monitor,3840x2160@144,auto-right,2.0
+monitor = $secondary_monitor,3840x2160@60,auto-left,2.0
 # Register correct an than be able to disable/enable from bar
 exec-once = hyprctl keyword monitor $secondary_monitor,disable
 
@@ -40,7 +40,7 @@ workspace = $primary_monitor, 5
 workspace = $primary_monitor, 6
 
 xwayland {
-  force_zero_scaling = true
+    force_zero_scaling = true
 }
 
 input {
