--- a/home/.config/hypr/hyprlock.conf
+++ b/home/.config/hypr/hyprlock.conf
@@ -2,10 +2,8 @@
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 
 $BACKGROUND_IMAGE = ~/.local/share/backgrounds/linux-elitist/tokyo-lofi-healing-1.png
-# $BACKGROUND_IMAGE = ~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
 $AVATAR_IMAGE = ~/.config/hypr/assets/avatar.jpg
 
-# # https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/
 general {
   grace = 0
   no_fade_out = true
@@ -20,14 +18,13 @@ background {
     path = $BACKGROUND_IMAGE  # or screenshot
 
     blur_size = 4
-    blur_passes = 3           # 0 disables blurring
+    blur_passes = 3
     noise = 0.0117
-    contrast = 1.3000         # Vibrant
+    contrast = 1.3000
     brightness = 0.2000
     vibrancy = 0.2100
     vibrancy_darkness = 0.0
 }
-
 
 # -----------------------------------------------------------------------
 # ---------------------------------- INPUT ------------------------------
@@ -75,7 +72,6 @@ label {
     valign = bottom
 }
 
-
 # -----------------------------------------------------------------------
 # --------------------------------- DATETIME ----------------------------
 # -----------------------------------------------------------------------
@@ -83,7 +79,7 @@ label {
     monitor =
     text = cmd[update:1000] echo "<b><big> $(date +"%H:%M") </big></b>"
     color = rgba(241, 192, 125, 1.0)
-    font_size = 96
+    font_size = 144
     font_family = SF Pro Display Bold
     shadow_passes = 3
     shadow_size = 4
@@ -97,10 +93,10 @@ label {
     monitor =
     text = cmd[update:1000] echo "<b> "$(date +'%A, %-d. %B %Y')" </b>"
     color = rgba(239, 236, 254, 1.0)
-    font_size = 24
+    font_size = 40
     font_family = SF Pro Display
 
-    position = 0, -4
+    position = 0, -30
     halign = center
     valign = center
 }
@@ -112,20 +108,20 @@ label {
     monitor =
     text = cmd[update:10000] echo "$USER"
     color = rgba(49, 183, 242, 0.75)
-    font_size = 28
+    font_size = 36
     font_family = SF Pro Display Bold
-    position = 50, -450
+    position = 100, -550
     halign = center
     valign = top
 }
 
 label {
     monitor =
-    text = cmd[update:10000] echo "  |"
+    text = cmd[update:10000] echo "  "
     color = rgba(242, 243, 244, 1.0)
-    font_size = 28
+    font_size = 36
     font_family = SF Pro Display Bold
-    position =-40, -450
+    position =-40, -550
     halign = center
     valign = top
 }
@@ -137,7 +133,7 @@ image {
     opacity = 0.5
     border_color = rgba(239, 236, 254, 0.50)
     border_size = 5
-    size = 200
+    size = 300
     rounding = -1
     rotate = 0
     reload_time = -1
@@ -147,13 +143,11 @@ image {
     valign = top
 }
 
-
 # --------------------------------------------------------------------
 # ------------------------------ MUSIC INFO --------------------------
 # --------------------------------------------------------------------
 label {
     monitor =
-#    text= cmd[update:1000] echo "$(playerctl metadata --format "{{ mpris:trackid }}" 2>/dev/null | grep -Eo "chromium|firefox|spotify")"
     text = cmd[update:1000] echo "$(~/.config/hypr/scripts/player.sh --source) "
     color = rgba(239, 236, 254, 1.0)
     font_size = 32
@@ -196,20 +190,20 @@ label {
     valign = top
 }
 
-# image {
-#     monitor =
-#     path = 
-#     size = 60 # lesser side if not 1:1 ratio
-#     rounding = 5 # negative values mean circle
-#     border_size = 0
-#     rotate = 0 # degrees, counter-clockwise
-#     reload_time = 2
-#     reload_cmd = ~/.config/hypr/scripts/playerctl.sh --arturl
-#     position = 150, -300
-#     halign = center
-#     valign = center
-#     opacity=0.5
-# }
+image {
+    monitor =
+    path = 
+    size = 400
+    rounding = 5
+    border_size = 0
+    rotate = 0
+    reload_time = 2
+    reload_cmd = ~/.config/hypr/scripts/player.sh --arturl
+    position = 300, -550
+    halign = left
+    valign = top
+    opacity=0.5
+}
 
 # ---------------------------------------------------------------------
 # ------------------------------ SYSTEM INFO --------------------------
