--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -32,6 +32,7 @@ binds {
     bind = CTRL_ALT, L, exec, hyprlock
     bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
     bind = CTRL_ALT, V, exec, alacritty -o "window.opacity=0.0" -t "cava" -e "cava"
+    bind = CTRL_ALT, p, exec, eww active-windows | grep app-launcher -q && eww close app-launcher || eww open app-launcher
 
     # Move focus with mainMod + arrow keys
     bind = SUPER, H, movefocus, l
@@ -89,5 +90,5 @@ binds {
 
     # Capturing
     bind = SUPER_SHIFT, s, exec, capture --image
-    bind = SUPER_SHIFT, v, exec, capture --video  # Second press stops recording
+    bind = SUPER_SHIFT, v, exec, capture --video
 }
