changes after trip to vienna

--- a/home/.config/hypr/autostart.conf
+++ b/home/.config/hypr/autostart.conf
@@ -1,15 +1,4 @@
-exec = pkill eww; eww daemon && eww open bar
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-# exec-once = eww open notify-generic
 
-# exec = ~/.config/eww/launch.sh bar
-# # exec = hyprpaper  // swww is used
-# exec = ~/.config/eww/scripts/wallpaper.sh --swww-wallpaper --reset
-# exec = hyprshade auto
-
-# exec-once = dunst
-# exec-once = blueman-applet
-# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-# exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = systemctl --user import-environment
-# exec-once = ~/.config/hypr/scripts/greeting.sh
+# exec-once = eww daemon
+exec = killall -9 eww; eww daemon; hyprctl monitors | grep "DP-3" -q && eww open bar --screen 1 || eww open bar --screen 0
