--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -3,9 +3,11 @@
 #   - mointors configured at 4K with scaling and refreshrate
 # ============================================================
 
-$terminal = alacritty
-$fileManager = thunar
-$menu = rofi -show drun
+# See https://wiki.hyprland.org/Configuring/Monitors/
+# - use `hyprctl monitors` two get names
+# Setting for second workplace at home
+monitor = eDP-1, 1920x1200@60, auto-right, 1.25
+monitor =  DP-3, 1920x1080@60, auto-left , 1.25
 
 source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/environment.conf
@@ -17,15 +19,6 @@ source = ~/.config/hypr/theme.conf
 # Plugins
 exec-once = hyprpaper
 exec-once = hypridle
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-# - use `hyprctl monitors` two get names
-
-# Setting for second workplace at home
-monitor = eDP-1, 1920x1200@60, auto, 1.25
-monitor =  DP-3, 1920x1080@60, 0x0 , 1.25
-
-exec = hyprctl monitors | grep DP-3 && pkill eww; eww open bar --screen 1
 
 workspace = eDP-1, 1
 workspace = eDP-1, 2
@@ -50,8 +43,15 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = -0.50
+    sensitivity = -0.5
     accel_profile = 'adaptive'
+}
+
+input:touchpad {
+    disable_while_typing = true
+    natural_scroll = true
+    middle_button_emulation = false
+    scroll_factor = 0.5
 }
 
 dwindle {
@@ -74,6 +74,7 @@ misc {
     animate_manual_resizes = true
     animate_mouse_windowdragging = true
     # enable_hyprcursor = true
+    middle_click_paste = false
 
     force_default_wallpaper = -1    # Set to 0 to disable the anime mascot wallpapers
 }
