--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -28,6 +28,7 @@ binds {
     bind = CTRL_ALT, L, exec, hyprlock
     bind = CTRL_ALT, I, exec, pgrep -x chromium > /dev/null && pkill -x chromium || chromium --app=https://chat.openai.com &
     bind = CTRL_ALT, V, exec, alacritty -o "window.opacity=0.0" -t "cava" -e "cava"
+    bind = CTRL_ALT, p, exec, eww active-windows | grep app-launcher -q && eww close app-launcher || eww open app-launcher
 
     # Move focus with mainMod + arrow keys
     bind = SUPER, H, movefocus, l
@@ -71,13 +72,13 @@ binds {
     bindl = , XF86AudioNext, exec, playerctl next
 
     # Volume
-    bindle = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/sound.sh --up && sleep 0.05
-    bindle = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/sound.sh --down && sleep 0.05
+    bindle = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/sound.sh --up
+    bindle = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/sound.sh --down
     bindl = , XF86AudioMute, exec, ~/.config/hypr/scripts/sound.sh --mute
 
     # Brightness
-    binde = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
-    binde = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+    binde = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/brightness.sh --up
+    binde = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/brightness.sh --down
 
     # Capturing
     bind = SUPER_SHIFT, s, exec, capture --image
