start of having just one config for both systems

--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -1,17 +1,15 @@
 binds {
     # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+    
+    bind = CTRL, Space, global, kando:main-menu
 
     bind = SUPER, RETURN, exec, alacritty
     bind = ALT, RETURN, exec, [float; pin; move 73% 5%; size 25% 20%] alacritty
-
+    
     bind = SUPER, C, setfloating
     bind = SUPER, C, resizeactive, exact 70% 60%
     bind = SUPER, C, centerwindow
 
-    # bind = SUPER, P, setfloating
-    # bind = SUPER, P, centerwindow
-    # bind = SUPER, P, resizeactive, exact 30% 30%
-    # bind = SUPER, P, moveactive, exact +90% +10%
     bind = SUPER_SHIFT, P, pin
 
     bind = SUPER_SHIFT, C, killactive
