--- a/home/.config/hypr/rules.conf
+++ b/home/.config/hypr/rules.conf
@@ -1,9 +1,10 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/
 
 windowrules {
-   windowrulev2 = size 50% 30%, class:^(.*xdg-desktop-portal-gtk.*)
-   windowrulev2 = float, class:^(.*xdg-desktop-portal-gtk.*)
-   windowrulev2 = move 25% 25%, class:^(.*xdg-desktop-portal-gtk.*)
+    windowrulev2 = size 50% 30%, class:^(.*xdg-desktop-portal-gtk.*)
+    windowrulev2 = float, class:^(.*xdg-desktop-portal-gtk.*)
+    windowrulev2 = move 25% 25%, class:^(.*xdg-desktop-portal-gtk.*)
+
 
     # ------------------------------
     # ---------- Alacritty ---------
@@ -30,6 +31,7 @@ windowrules {
     windowrulev2 = move 25% 25%, class:^(.*Alacritty.*),title:^(.*nwtui.*)
     windowrulev2 = size 50% 50%, class:^(.*Alacritty.*),title:^(.*nwtui.*)
 
+
     # ---------------------------
     # ---------- Discord ---------
     # ---------------------------
@@ -38,12 +40,26 @@ windowrules {
     windowrulev2 = float, class:^(.*discord.*)
     windowrulev2 = size 75% 75%, class:^(.*discord.*)
 
+
     # ----------------------------
     # ---------- Firefox ---------
     # ----------------------------
     windowrulev2 = workspace 1, class:^(.*firefox.*)
     windowrulev2 = opacity 0.96 override 0.92 override, class:^(.*firefox.*)
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*firefox.*), title:^(.*WatchSerie.*|.*Twitch.*|.*ZDFmediathek.*|.*YouTube.*|.*Livestream.*|.*F1 TV.*|.*Disney+.*|.*Netflix.*)
+
+
+    # --------------------------
+    # ---------- Kando ---------
+    # --------------------------
+    # https://github.com/kando-menu/kando/blob/main/docs/installing.md#platform-specific-notes
+    windowrule = noblur, kando 
+    windowrule = size 100% 100%, kando
+    windowrule = noborder, kando
+    windowrule = noanim, kando
+    windowrule = float, kando
+    windowrule = pin, kando
+
 
     # ------------------------
     # ---------- MPV ---------
@@ -53,6 +69,7 @@ windowrules {
     windowrulev2 = move 90.5% 5%, class:^(.*mpv.*)
     windowrulev2 = size 159 94, class:^(.*mpv.*)
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*mpv.*)
+
 
     # -------------------------
     # ---------- Rofi ---------
@@ -66,12 +83,14 @@ windowrules {
     windowrulev2 = size 300 400, class:^(.*Chromium.*)
     windowrulev2 = opacity 0.98 override 0.50 override 0.98 override, class:^(.*Chromium.*)
 
+
     # ---------------------------
     # ---------- Thunar ---------
     # ---------------------------
     windowrulev2 = float, class:^(.*thunar.*), title:^(.*File System.*)
     windowrulev2 = move 25% 30%, class:^(.*thunar.*), title:^(.*File System.*)
     windowrulev2 = size 50% 40%, class:^(.*thunar.*), title:^(.*File System.*)
+
 
     # ---------------------------
     # ---------- Spotity ---------
@@ -80,6 +99,7 @@ windowrules {
     windowrulev2 = workspace 4, title:^(.*Spotify.*)
     windowrulev2 = float, title:^(.*Spotify.*)
     windowrulev2 = size 75% 75%, title:^(.*Spotify.*)
+
 
     # -------------------------
     # ---------- Steam --------
@@ -97,10 +117,6 @@ windowrules {
     windowrulev2 = opacity 1 override 1 override 1 override, class:^(.*Desperados.*)
     windowrulev2 = opacity 1 override 1 override 1 override, title:^(.*Unigine.*)
 
-    # windowrulev2 = float, class:^(.*dota2.*)
-    # windowrulev2 = center, class:^(.*dota2.*)
-
-
 
     # ---------------------------------------
     # ---------- Visual Studio Code ---------
@@ -110,6 +126,7 @@ windowrules {
     windowrulev2 = float, class:^(.*code.*), title:^(.*Open .*)
     windowrulev2 = size 40% 40%, class:^(.*code.*), title:^(.*Open .*)
     windowrulev2 = animation slide, class:^(.*code.*), title:^(.*Open .*)
+
 
     # ----------------------------------------
     # ---------- Volume: pavucontrol ---------
