--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -1,16 +1,36 @@
-# ============================================================
-# Configured for a two monitor setup with NVIDIA graphics card
-#   - mointors configured at 4K with scaling and refreshrate
-# ============================================================
+# -----------------------------------------------------
+# -------------------- MONITORS -----------------------
+# -----------------------------------------------------
+# Using the `hyprctl keyword monitor` command instead
+# of the `monitor =` setting in the config file allows
+# for differentiation between two systems.
+# However, the monitors are reconfigured each time
+# Hyprland is reloaded.
+#
+# For more information, visit:
+# https://wiki.hyprland.org/Configuring/Monitors/
 
-# hyprctl monitors
-$primary_monitor = DP-3
-$secondary_monitor = DP-1
+exec = sudo dmidecode -t 2 | grep Z790-E -q && hyprctl keyword monitor  DP-1, highres@highr, auto-left,  2.00
+exec = sudo dmidecode -t 2 | grep Z790-E -q && hyprctl keyword monitor  DP-3, highres@highr, auto-right, 2.00
+# monitor = DP-1, highres@highr, auto-left,  2.00
+# monitor = DP-3, highres@highr, auto-right, 2.00
 
-$terminal = alacritty
-$fileManager = thunar
-$menu = rofi -show drun
+exec = sudo dmidecode -t 2 | grep Lenovo -q && hyprctl keyword monitor  DP-3, highres@highr, auto-left,  1.25
+exec = sudo dmidecode -t 2 | grep Lenovo -q && hyprctl keyword monitor eDP-1, highres@highr, auto-right, 1.25
+# monitor =  DP-3, highres@highr, auto-left,  1.25
+# monitor = eDP-1, highres@highr, auto-right, 1.25
 
+
+# -----------------------------------------------------
+# --------------------- PLUGINS -----------------------
+# -----------------------------------------------------
+exec-once = hyprpaper
+exec-once = hypridle
+
+
+# -----------------------------------------------------
+# --------------------- SOURCE ------------------------
+# -----------------------------------------------------
 source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/environment.conf
 source = ~/.config/hypr/keybinds.conf
@@ -18,27 +38,10 @@ source = ~/.config/hypr/rules.conf
 source = ~/.config/hypr/vanity.conf
 source = ~/.config/hypr/theme.conf
 
-# Plugins
-exec-once = hyprpaper
-exec-once = hypridle
-# exec-once = hyprpm reload -n
 
-# https://github.com/VortexCoyote/hyprfocus    ! does not buld right now!!!!!!!!! try again later
-# source = ~/.config/hypr/plugins/hyprfocus.conf
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = $primary_monitor,3840x2160@144,auto-right,2.0
-monitor = $secondary_monitor,3840x2160@60,auto-left,2.0
-# Register correct an than be able to disable/enable from bar
-exec-once = hyprctl keyword monitor $secondary_monitor,disable
-
-workspace = $primary_monitor, 1
-workspace = $primary_monitor, 2
-workspace = $primary_monitor, 3
-workspace = $primary_monitor, 4
-workspace = $primary_monitor, 5
-workspace = $primary_monitor, 6
-
+# -----------------------------------------------------
+# -------------------- SETTINGS -----------------------
+# -----------------------------------------------------
 xwayland {
     force_zero_scaling = true
 }
@@ -59,27 +62,26 @@ input {
     accel_profile = 'adaptive'
 }
 
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/
     pseudotile = yes
     preserve_split = yes
 
     force_split = 0
 }
 
+# See https://wiki.hyprland.org/Configuring/Master-Layout/
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/
     new_status = master
     new_on_top = true
 }
 
 misc {
-    disable_autoreload = false      # hyprctl reload
+    disable_autoreload = false
     disable_hyprland_logo = true
     animate_manual_resizes = true
     animate_mouse_windowdragging = true
-    # enable_hyprcursor = true
 
-    force_default_wallpaper = -1    # Set to 0 to disable the anime mascot wallpapers
+    force_default_wallpaper = -1
 }
 
