--- a/home/.config/hypr/hyprpaper.conf
+++ b/home/.config/hypr/hyprpaper.conf
@@ -1,8 +1,12 @@
 # https://github.com/hyprwm/hyprpaper
 
 preload = ~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
-
-wallpaper = DP-1,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
-wallpaper = DP-3,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
-
 splash = false
+
+# ------ Desktop ------
+wallpaper =  DP-1,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
+wallpaper =  DP-3,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
+
+# ------ Laptop ------
+wallpaper = eDP-1,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
+wallpaper =  DP-3,~/.local/share/backgrounds/linux-elitist/ecatherina-farias.png
