--- a/home/.config/hypr/nvidia.conf
+++ b/home/.config/hypr/nvidia.conf
@@ -1,8 +1,14 @@
 # https://wiki.hyprland.org/Nvidia/#foreword
+
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
-env = NVD_BACKEND,direct
+
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = NVD_BACKEND,direct
+
+cursor {
+ no_hardware_cursors = true
+}
+
