adjustments from the notebook side

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -15,8 +15,8 @@ exec = sudo dmidecode -t 2 | grep Z790-E -q && hyprctl keyword monitor  DP-3, hi
 # monitor = DP-1, highres@highr, auto-left,  2.00
 # monitor = DP-3, highres@highr, auto-right, 2.00
 
-exec = sudo dmidecode -t 2 | grep Lenovo -q && hyprctl keyword monitor  DP-3, highres@highr, auto-left,  1.25
-exec = sudo dmidecode -t 2 | grep Lenovo -q && hyprctl keyword monitor eDP-1, highres@highr, auto-right, 1.25
+exec = sudo dmidecode -t 2 | grep LENOVO -q && hyprctl keyword monitor eDP-1, highres@highr, auto-right, 1.25
+exec = sudo dmidecode -t 2 | grep LENOVO -q && hyprctl keyword monitor  DP-3, highres@highr, auto-left,  1.25
 # monitor =  DP-3, highres@highr, auto-left,  1.25
 # monitor = eDP-1, highres@highr, auto-right, 1.25
 
