--- a/home/.config/hypr/keybinds.conf
+++ b/home/.config/hypr/keybinds.conf
@@ -10,7 +10,8 @@ binds {
     bind = SUPER, C, resizeactive, exact 70% 60%
     bind = SUPER, C, centerwindow
 
-    bind = SUPER_SHIFT, P, pin
+    bind = SUPER, P, pin
+    bind = SUPER, U, exec, ~/.config/eww/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
 
     bind = SUPER_SHIFT, C, killactive
     bind = SUPER_SHIFT, Q, exit
