--- a/home/.config/hypr/autostart.conf
+++ b/home/.config/hypr/autostart.conf
@@ -4,4 +4,4 @@ exec = killall -9 eww; eww daemon
 # Differentiate where the bar is shown. For the lenovo laptop,
 # the bar is also resized to fix for the scaling 1.25.
 exec = sudo dmidecode -t 2 | grep Z790-E && eww open bar --screen 1
-exec = sudo dmidecode -t 2 | grep LENOVO -q && hyprctl monitors | grep "DP-3" -q && eww open bar --screen 1 --size 1536x20 || eww open bar --screen 0 --size 1536x20
+exec = sudo dmidecode -t 2 | grep LENOVO -q && `hyprctl monitors | grep "DP-3" -q && eww open bar --screen 1 --size 1536x20 || eww open bar --screen 0 --size 1536x20`
