first try ags with ts

--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -20,6 +20,7 @@ exec = sudo dmidecode -t 2 | grep LENOVO -q && hyprctl keyword monitor  DP-3, hi
 # monitor =  DP-3, highres@highr, auto-left,  1.25
 # monitor = eDP-1, highres@highr, auto-right, 1.25
 
+exec = killall -9 ags; ags
 
 # -----------------------------------------------------
 # --------------------- PLUGINS -----------------------
